--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,3 +1,10 @@
+.visible {
+  display: block;
+}
+.invisible {
+  display: none;
+}
+
 .itemList {
   display: flex;
   flex-direction: row;
@@ -15,6 +22,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+
+    .cartItemImage {
+      width: 100px;
+    }
   }
   .infoModal {
     display: block;
