feat: 삭제 기능 구현, 총 금액 표기

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -17,11 +17,20 @@
 }
 
 .cart {
+  min-width: 300px;
   position: relative;
   .cartList {
     display: flex;
     flex-direction: column;
     gap: 10px;
+
+    .cartItemCard {
+      display: flex;
+      justify-content: space-between;
+    }
+    .cartItemTitle {
+      margin-right: 10px;
+    }
 
     .cartItemImage {
       width: 100px;
