--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -37,10 +37,13 @@
     }
   }
   .infoModal {
-    display: block;
     position: absolute;
     left: 0;
     transform: translateX(-100%);
+
+    .modalTitle {
+      margin-right: 220px;
+    }
   }
   .buy {
     display: flex;
