feat: 장바구니 비우기, 가격 관련 경고 구현

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -49,5 +49,18 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+
+    .buyInfo {
+      display: flex;
+      justify-content: space-between;
+      .totalPrice {
+        display: inline-block;
+      }
+
+      .clearCart {
+        font-size: 13px;
+        padding: 2px 4px;
+      }
+    }
   }
 }
